logs_student/map_operations/count.log
In file included from main/map_operations//count.cpp:1:
In file included from main/map_operations/../main.hpp:24:
main/map_operations/../../.././containers/map.hpp:122:26: error: no member named 'count' in 'ft::Tree<ft::pair<int, int>, std::less<int> >'
            return _tree.count(k);
                   ~~~~~ ^
main/map_operations//count.cpp:11:21: note: in instantiation of member function 'ft::map<int, int>::count' requested here
    std::cout << m1.count(1) << std::endl;
                    ^
1 error generated.
